test/corpus/literals
================================================================================
integers
================================================================================
123;
077;
0xDEADBEEF;
0b11011011011;
1234567890198;
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (number))
  (expression_statement
    (number))
  (expression_statement
    (number))
  (expression_statement
    (number))
  (expression_statement
    (number)))
================================================================================
floats
================================================================================
111_111e99_99;
111_111e-99_99;
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (number))
  (expression_statement
    (number)))
================================================================================
'' strings
================================================================================
'hello';
'a\'string';
'a\\string';
--------------------------------------------------------------------------------

(source_file
  (expression_statement (string_literal))
  (expression_statement (string_literal (escape_sequence)))
  (expression_statement (string_literal (escape_sequence))))
================================================================================
q() strings
================================================================================
q(hello);
q(a 'string');
q(a (string) here);
--------------------------------------------------------------------------------

(source_file
  (expression_statement (string_literal))
  (expression_statement (string_literal))
  (expression_statement (string_literal)))
================================================================================
"" strings
================================================================================
"hello";
"a\"string";
"a\\string";
--------------------------------------------------------------------------------

(source_file
  (expression_statement (interpolated_string_literal))
  (expression_statement (interpolated_string_literal (escape_sequence)))
  (expression_statement (interpolated_string_literal (escape_sequence))))
================================================================================
qq() strings
================================================================================
qq(hello);
qq(a 'string');
qq(a (string) here);
--------------------------------------------------------------------------------

(source_file
  (expression_statement (interpolated_string_literal))
  (expression_statement (interpolated_string_literal))
  (expression_statement (interpolated_string_literal)))
================================================================================
Interpolation in "" strings
================================================================================
"with $scalar";
"with @array";
--------------------------------------------------------------------------------

(source_file
  (expression_statement (interpolated_string_literal (scalar)))
  (expression_statement (interpolated_string_literal (array))))
================================================================================
qw() lists
================================================================================
qw( a b c );
qw();
qw/ 1 2 /;
--------------------------------------------------------------------------------

(source_file
  (expression_statement (quoted_word_list))
  (expression_statement (quoted_word_list))
  (expression_statement (quoted_word_list)))
